# Vinaya

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.claude/: settings.local.json
.claude/docs/: 领导驾驶舱指标列表.xlsx
.snow/: permissions.json
.snow/notebook/: py.json  py_snapshots.json
apps/api/: main.py  migrate_to_sqlite.py  package.json
apps/api/vinaya_api/: llm.py  repository.py  repository_json.py  repository_sqlite.py  schemas.py
apps/api/vinaya_api/services/: cases.py  confessions.py  demo.py  export.py  history.py  llm_providers.py  notifications.py  request_models.py  requests.py  requests_stream.py  reviews.py  rules.py  status.py
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  judgment-progress.tsx  layout.tsx  nav-bar.tsx  page.tsx  request-form.tsx
apps/web/app/cases/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/export/: page.tsx
apps/web/app/models/: llm-providers-tab.tsx  model-manager.tsx  page.tsx  request-models-tab.tsx
apps/web/app/notifications/: page.tsx
data/: confessions.json  llm-providers.json  notifications.json  request-models.json  request-reports.json  request-reviews.json  rules-config.json
docs/: sdk_examples.py  vinaya-architecture-v0.1.md  vinaya-charter-v0.1.md  vinaya-mvp-prd-v0.1.md  vinaya-status-v0.1.md
vinaya/: README.md  __init__.py  async_client.py  client.py  guard.py  local.py  middleware.py  types.py
vinaya_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+8 files in other folders)
