[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinaya-workspace"
version = "0.1.0"
description = "Vinaya judgment purification engine with Next.js web app and FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0"
]

[tool.setuptools]
packages = []
